2001-08-04  Richard Henderson  <rth@redhat.com>

	* gas/alpha/alpha.exp: New file.
	* gas/alpha/elf-reloc-1.[sd]: New test.
	* gas/alpha/elf-reloc-2.[sl]: New test.
	* gas/alpha/elf-reloc-3.[sl]: New test.
	* gas/alpha/elf-reloc-4.[sd]: New test.
	* gas/alpha/fp.exp: Remove file.
	* gas/alpha/fp.s: Output to .data not .rdata.
	* gas/alpha/fp.d: Adjust to match.

Tue Sep  4 20:06:09 2001  Jeffrey A Law  (law@cygnus.com)

	* gas/all/gas.exp (930509a): Expect failure on the H8/300 ELF port.

	* gas/h8300/ffxx1-elf.d: Update due to recent changes to H8/300
	ELF toolchain.
	* gas/h8300/h8300-elf.exp: Likewise.

	* gas/macros/macros.exp: Expect failure on all H8/300 ports.

	* gas/vtable/vtable.exp: Do not run tests on H8/300 ELF ports.

Thu Aug 30 21:58:48 2001  J"orn Rennecke <amylaar@redhat.com>

	* gas/h8300/h8300.exp (do_h8300_cbranch): Remove invocation.
	(do_h8300_branch, do_h8300h_cbranch, do_h8300h_branch): Likewise.
	(do_h8300s_cbranch, do_h8300s_branch, ffxx1): Likwise.
	* gas/h8300/h8300-coff.exp, gas/h8300/h8300-elf.exp: New files.
	* gas/h8300/branch-elf.s, gas/h8300/branchh-elf.s: Likewise.
	* gas/h8300/branchs-elf.s, gas/h8300/ffxx1-elf.d: Likewise.
	* gas/h8300/ffxx1-elf.s: Likewise.
	* gas/h8300/branch.s, gas/h8300/branchh.s: Move to:
	* gas/h8300/branch-coff.s, gas/h8300/branchh-coff.s
	* gas/h8300/branchs.s, gas/h8300/ffxx1.d: Move to:
	* gas/h8300/branchs-coff.s, gas/h8300/ffxx1-coff.d .
	* gas/h8300/ffxx1.s: Move to:
	* gas/h8300/ffxx1-coff.s .

Wed Aug 29 12:05:13 2001  J"orn Rennecke <amylaar@redhat.com>

	* lib/gas-defs.exp: (regexp_diff) At verbosity 3, also show
	where mismatch occurs due to regexp mismatch.

2001-08-27  Staffan Ulfberg  <staffanu@swox.se>
	    Alan Modra  <amodra@bigpond.net.au>

	* gas/macros/macros.exp: xfail powerpc-*-aix.
	* gas/ppc/astest64.s: New.
	* gas/ppc/astest64.d: New.
	* gas/ppc/astest2_64.s: New.
	* gas/ppc/astest2_64.d: New.
	* gas/ppc/test1elf.asm: New.
	* gas/ppc/test1xcoff.asm: New.