@@ -1,3 +1,8 @@
+2001-09-06  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* gas/mips/tmips16-f.d: New file, testcase for big endian MIPS16
+	relocations, tradtional variant.
+
 2001-08-04  Richard Henderson  <rth@redhat.com>
 
 	* gas/alpha/alpha.exp: New file.
